Add new -secrets option to enable {{.Secret.VAR}} values to be evaluated in templates
Nginx:
    -- split the ENTRYPOINT into an ENTRYPOINT and CMD so the command can be varied
    -- added more use-cases to the Makefile: run-prod, run-staging, run-proxy-amazon, run-secrets
    -- install the default.tmpl into the correct place, so it actually gets used !
    -- add examples of templating to default.html
    -- more sample content:  secrets.html, staging/index.html

template.go
    -- Add .Secret.VAR support
    -- optimize to only read the os.GetEnv once, and only parse secrets.env files once

--- a/examples/nginx/Makefile
+++ b/examples/nginx/Makefile
@@ -7,12 +7,35 @@ build:
 	rm .dockerize_linux_amd64.tar.gz
 
 
-run-staging: 
+stop:
 	docker rm -f dockerized-nginx 2>/dev/null || true
-	docker run -d -p 80:80 -e DEPLOYMENT_ENV=staging --name dockerized-nginx dockerized-nginx
+
+run-staging: stop
+	docker run -d -p 80:80 -e DEPLOYMENT_ENV=staging --name dockerized-nginx dockerized-nginx \
+		     -overlay /tmp/overlays/_common/html:/usr/share/nginx/ \
+	         -overlay "/tmp/overlays/{{ .Env.DEPLOYMENT_ENV }}/html:/usr/share/nginx/" \
+	         -- nginx
+	open http://$(shell docker-machine ip $(shell docker-machine active))/robots.txt
+	open http://$(shell docker-machine ip $(shell docker-machine active))
+
+run-prod: stop
+	docker run -d -p 80:80 -e DEPLOYMENT_ENV=prod --name dockerized-nginx dockerized-nginx \
+		     -overlay /tmp/overlays/_common/html:/usr/share/nginx/ \
+	         -overlay "/tmp/overlays/{{ .Env.DEPLOYMENT_ENV }}/html:/usr/share/nginx/" \
+	         -- nginx
 	open http://$(shell docker-machine ip $(shell docker-machine active))/robots.txt
 
-run-prod: 
+run-proxy-amazon: stop
+	docker run -d -p 80:80 -e PROXY_PASS_URL="https://www.amazon.com/" --name dockerized-nginx dockerized-nginx
+	open http://$(shell docker-machine ip $(shell docker-machine active))
+
+run-prod-secrets:
 	docker rm -f dockerized-nginx 2>/dev/null || true
-	docker run -d -p 80:80 -e DEPLOYMENT_ENV=prod --name dockerized-nginx dockerized-nginx
-	open http://$(shell docker-machine ip $(shell docker-machine active))/robots.txt
+	docker run -d -p 80:80 -e DEPLOYMENT_ENV=prod --name dockerized-nginx \
+				-v $(PWD):/secrets \
+				dockerized-nginx \
+					-overlay /tmp/overlays/_common/html:/usr/share/nginx/ \
+					-overlay "/tmp/overlays/{{ .Env.DEPLOYMENT_ENV }}/html:/usr/share/nginx/" \
+					-template "/secrets/secrets.html.tmpl:/usr/share/nginx/html/secrets.html" \
+			        -secrets /secrets/secrets.env -- nginx 
+	open http://$(shell docker-machine ip $(shell docker-machine active))/secrets.html
