--- a/examples/nginx/Makefile
+++ b/examples/nginx/Makefile
@@ -1,10 +1,17 @@
-.PHONY : build run-staging run-prod
+.PHONY : build run-staging run-prod stop run-proxy-amazon run-prod-secrets
+.PHONY : zombie-maker-debian-binary
 
-build: 
+build: zombie-maker
 	cd ../..; goxc -os linux -arch amd64
 	cp -f $(shell bash -xc 'find $(GOPATH)/bin -name dockerize_linux_amd64.tar.gz| head -1') .dockerize_linux_amd64.tar.gz
 	docker build -t dockerized-nginx .
 	rm .dockerize_linux_amd64.tar.gz
+
+
+zombie-maker: zombie-maker.c
+	# build a native and debian binary
+	docker run --rm -v "$(PWD)":/tmp -w /tmp gcc gcc -o zombie-maker-debian-binary zombie-maker.c
+	gcc -o zombie-maker zombie-maker.c
 
 
 stop:
@@ -29,8 +36,7 @@ run-proxy-amazon: stop
 	docker run -d -p 80:80 -e PROXY_PASS_URL="https://www.amazon.com/" --name dockerized-nginx dockerized-nginx
 	open http://$(shell docker-machine ip $(shell docker-machine active))
 
-run-prod-secrets:
-	docker rm -f dockerized-nginx 2>/dev/null || true
+run-prod-secrets: stop
 	docker run -d -p 80:80 -e DEPLOYMENT_ENV=prod --name dockerized-nginx \
 				-v $(PWD):/secrets \
 				dockerized-nginx \
@@ -39,3 +45,10 @@ run-prod-secrets:
 					-template "/secrets/secrets.html.tmpl:/usr/share/nginx/html/secrets.html" \
 			        -secrets /secrets/secrets.env -- nginx 
 	open http://$(shell docker-machine ip $(shell docker-machine active))/secrets.html
+
+run-zombie-test: stop
+	docker run -d --name dockerized-nginx dockerized-nginx -reap -- zombie-maker 10 200 
+	@echo "Tailing logs -- look for zombies"
+	docker logs -f dockerized-nginx
+
+
