--- a/examples/nginx/Makefile
+++ b/examples/nginx/Makefile
@@ -47,7 +47,8 @@ run-prod-secrets: stop
 	open http://$(shell docker-machine ip $(shell docker-machine active))/secrets.html
 
 run-zombie-test: stop
-	docker run -d --name dockerized-nginx dockerized-nginx -reap -run zombie-maker 10 2 -- sleep 20
+	docker run -d --name dockerized-nginx dockerized-nginx  -verbose -reap \
+		-run zombie-maker 10 2 -- -run sleep 5 -- -run ps -ef -- sleep 200
 	@echo "Tailing logs -- look for zombies"
 	docker logs -f dockerized-nginx
 
